--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="NehaNakrani">
+  <meta name="author" content="NehaNakrani">
+  <title>Neha Nakrani</title>
+  <!-- Replace the content attribute of the link tag with the actual path to your favicon -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <!-- Add any additional meta tags or links to stylesheets here -->
+</head>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!-- Add any additional scripts here, if necessary -->
+</body>
 </html>
